Bug 540974 - [Mac classic] On received messages, if too many attachments, scroll bar works but is not visible. r=Mnyromyr, sr=Neil.

--- a/suite/themes/classic/mac/messenger/messageHeader.css
+++ b/suite/themes/classic/mac/messenger/messageHeader.css
@@ -54,6 +54,12 @@
   font-weight: bold;
 }
 
+#attachmentList {
+  min-height: 58px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /* ::::: msg header captions ::::: */
 
 #msgHeaderView {
